# CW_5

./: .env  README.md  employers_config.json  main.py  pyproject.toml  requirements.txt
cw_5/: config.py
cw_5/api_clients/: __init__.py  base.py  entities.py  hh_cl.py
cw_5/cli/: init_db.py  search_employers.py
cw_5/db/: loader.py  migrations.py  user_interaction.py
cw_5/db/managers/: base.py  pg_db_manager.py
cw_5/migrations/: 002_create_vacancies_table.sql
